# EloSocial

./: .gitignore  BACKLOG.md  COMO_ATUALIZAR.md  DOCKER.md  README.md  docker-compose.yml  opencode.json  run.bat  run.sh  setup.bat  setup.sh
.agents/: .skill-lock.json  .skill-lock.json.backup
.opencode/: context.md
.specs/: STATE.md  lessons.json
.specs/04_relatorio/: spec.md
backend/: .env  .env.example  .vercelignore  Dockerfile  Dockerfile.example  generate_pdf.py  pyproject.toml  requirements.txt  test_gemini.py
backend/app/: config.py  main.py
backend/app/api/: ai.py  ocr.py  rag.py  report_generator.py  reports.py  search_global.py  suas_context.py  users_admin.py  video.py
backend/app/services/: pdf_generator.py
backend/tests/: test_pdf_generator.py  test_rag.py
docs/features/: alteracoes_front_profissionais.md  alteracoes_front_requerente.md  alterações_bd.md  novo_modelo_prontuario.md
docs/migracao-telemedicina/: 00-VISAO-GERAL.md  01-ROLE-REQUERENTE.md  02-TRIAGEM-SOCIAL.md  03-DASHBOARD-REQUERENTE.md  04-CHAT-CASO.md  05-VIDEOCHAMADA.md  06-PLAO-AOCAO.md  07-COFRE-DIGITAL.md  08-MIGRACAO-DATABASE.md  09-ROTA-IMPLEMENTACAO.md  10-GUIA-TESTES.md  PLANO-IMPLEMENTACAO.md
docs/relatorio/: relatorio.md
frontend/: .env  .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: sw.js
frontend/src/: App.jsx  index.css  main.jsx
supabase/: seed.sql
supabase/migrations/: 00001_schema.sql  00002_add_cras.sql  00002_storage.sql  00003_chat_requerente_rls.sql  00003_video_rooms.sql  (+14 more)
(+137 files in other folders)
