[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "google-generativeai==0.8.3",
    "httpx<0.28",
    "pydantic==2.10.4",
    "pypdf>=4.1.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "reportlab==4.3.1",
    "supabase==2.10.0",
    "uvicorn[standard]==0.34.0",
]
